--- a/public/stylesheets/sass/_footer.scss
+++ b/public/stylesheets/sass/_footer.scss
@@ -40,8 +40,8 @@
   padding: $base-spacing;
   width: 100%;
   // position:absolute;
-  bottom:0;
-  display: inline-block;
+  // bottom:0;
+  // display: inline-block;
 
 .navigation-wrapper {
     @include clearfix;
